Extracted Arguments class and polished

--- a/.gitignore
+++ b/.gitignore
@@ -2,32 +2,22 @@
 *.log
 **/tmp
 
+# [python]
+__pycache__
+*.pyc
+
 # [c++]
+*.gch
+*.pch
 *.o
+*.a
 *.obj
 *.exe
 
-# [qtcreator]
-*.pro.user
-*.stash
-debug/
-release/
-Makefile
-Makefile.Debug
-Makefile.Release
-
 # [msvc]
-.vs/
-*.exe.recipe
-*.iobj
-*.tlog
-*.ipch
-*.idb
+.vs
 *.pdb
 *.ilk
-*.suo
-*.VC.db
-*.db-*
-*.opendb
-*.filters
-*.user
+
+# [specific]
+build/bin
